--- a/LmsFrontEndSolution-TemplateFinal/js/views/templates/form_template.ejs
+++ b/LmsFrontEndSolution-TemplateFinal/js/views/templates/form_template.ejs
@@ -1,34 +1,3 @@
-                <!-- RENDER YOUR SELECT INPUT -->
-                <!-- Iterate 'options' to output each select option-->
-                <!-- Remember to create an option with a blank 'value'
-                    You can use the field.placeholder for the name -->
-                    <!--EXAMPLE VIEW MODEL FOR SELECT
-                      {
-                          label: "Team",
-                          name: "team_id",
-                          inputType: "select",
-                          list:true,
-                          placeholder: "Select a Team",
-                          lookupName: "teams",
-                          validation: {
-                              required: true
-                          }
-                      } RENDER YOUR OTHER INPUTS 
-                    No need to render radio buttons or checkboxes for this 
-                    go round.  Only 'inputs'-->
-                    <!--EXAMPLE VIEW MODEL FOR NORMAL INPUT
-                      {
-                          label: "Address",
-                          name: "address1",
-                          inputType: "text",
-                          list: false,
-                          placeholder: "Enter your address name here",
-                          validation: {
-                              required: true,
-                              requiredMessage: "Address is required!"
-                          }
-                      }, -->
-
 <div class="row">
   <div class="col-sm-12">
         <form id="<%=view.viewModel.form.id%>" class="needs-validation">
@@ -63,13 +32,9 @@
             <%} 
             else { 
               %>
-
-              
-
-
                       <label for="<%= field.name %>"><%= field.label %></label>
                       <input type="<%= field.inputType %>" class="form-control" name="<%= field.name %>" id="<%= field.name %>" placeholder="<%= field.placeholder %>"
-                        value="<%= fieldVal %>" />
+                      value="<% if (view._data) { %><%=view._data[field.name]%><% } %>"/>
                       <div class="invalid-feedback"></div>
                 <% } %>
               </div>
